fix safari/ios misalignment

--- a/packages/searchbox/src/sass/_module.scss
+++ b/packages/searchbox/src/sass/_module.scss
@@ -46,6 +46,7 @@
 	.au-btn {
 		border-bottom-left-radius: 0;
 		border-top-left-radius: 0;
+		margin: 0;
 
 		&--dark {
 			border-left: solid 2px lightgrey !important;
